--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
     implementation "com.github.bumptech.glide:glide:4.11.0"
+    //mapa
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+
 
 }
