--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.dabebel.registro">
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="your.package.name.permission.MAPS_RECEIVE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,13 +15,21 @@
         android:theme="@style/temaAplicacion">
 
 
-        <activity android:name=".Login" android:exported="true">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+
+        <activity android:name=".SplashActivity" android:exported="true">
 
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".Login">
+
         </activity>
 
         <activity android:name=".Registro">
@@ -34,6 +45,10 @@
         </activity>
 
         <activity android:name=".Perfil">
+
+        </activity>
+
+        <activity android:name=".Mapa">
 
         </activity>
 
