--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name=".Mapa">
 
         </activity>
+        <activity android:name=".Mapa2">
+
+        </activity>
 
         <activity android:name=".Mapa2">
 
