--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,16 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
+    //recycler
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-storage'
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.1'
+
+    implementation 'com.firebaseui:firebase-ui-firestore:6.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
 }
