--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,9 +57,13 @@
 
         <activity android:name=".Invitar">
 
+
         </activity>
         <activity android:name=".EditarPerfil">
 
+        </activity>
+
+        <activity android:name=".Monedero">
         </activity>
     </application>
 
