--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/MSFTSIG.SF'
+        exclude 'META_INF/ECLIPSE_.SF'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
